Tests/RunCMake/CMakePresets/UnknownToolsetStrategy-stderr.txt
^CMake Error: Could not read presets from [^
]*/Tests/RunCMake/CMakePresets/UnknownToolsetStrategy:
Error: @9,21: Invalid preset
        "strategy": "unknown"
                    \^$
